# technical_test_python

./: Dockerfile  README.md  compose.yaml  example.env  main.py  pyproject.toml
app/api/: __init__.py  authenticate.py  cliente.py  intereses.py
app/model/: __init__.py
app/repository/: base.py  operation_repository.py  session_repository.py
app/schema/: __init__.py  auth.py  cliente.py  operation.py  session.py
app/services/: auth_service.py  cliente_service.py  intereses_service.py
app/util/: dependencies.py  http_client.py  settings.py
backend/: .dockerignore  .env  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/api/: authenticate.py  cliente.py  intereses.py
backend/app/model/: __init__.py  mongo.py  operation.py  session.py
backend/app/repository/: operation_repository.py  session_repository.py
backend/app/schema/: auth.py  intereses.py  operation.py  session.py
backend/app/services/: auth_service.py  cliente_service.py  intereses_service.py
backend/app/util/: dependencies.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/constants/: routes.js
frontend/src/features/auth/: index.js
frontend/src/features/auth/components/: LoginPage.jsx  RegisterPage.jsx
frontend/src/features/clients/: index.js
frontend/src/router/: AppRouter.js
frontend/src/shared/api/: axiosInstance.js  endpoints.js
frontend/src/shared/components/: Layout.jsx  PrivateRoute.js
frontend/src/shared/context/: NotificationContext.jsx
frontend/src/shared/theme/: theme.js
(+16 files in other folders)
