[project]
name = "technical-test-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "motor>=3.7.0",
    "pydantic>=2.13.3",
    "pymongo>=4.17.0",
    "starlette>=1.0.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
